# ur-reaching-reinforcement-learning

./: README.md
images/: rviz_visual_tools
robotiq_2finger_grippers/robotiq_2f_gripper_control/: CMakeLists.txt  package.xml  setup.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/include/robotiq_2f_gripper_control/: robotiq_gripper_client.h
robotiq_2finger_grippers/robotiq_2f_gripper_control/launch/: robotiq_action_server.launch  robotiq_dual_action_server.launch  test_140mm_gripper.launch  test_85mm_gripper.launch
robotiq_2finger_grippers/robotiq_2f_gripper_control/scripts/: robotiq_2f_action_client_example.py  robotiq_2f_action_server.py
robotiq_2finger_grippers/robotiq_2f_gripper_control/src/robotiq_2f_gripper_control/: modbus_crc.py  robotiq_2f_gripper.py  robotiq_2f_gripper_driver.py
robotiq_2finger_grippers/robotiq_2f_gripper_msgs/: CMakeLists.txt  package.xml
robotiq_2finger_grippers/robotiq_2f_gripper_msgs/action/: CommandRobotiqGripper.action
robotiq_2finger_grippers/robotiq_2f_gripper_msgs/msg/: RobotiqGripperCommand.msg  RobotiqGripperStatus.msg
src/ur_robotiq/ur_robotiq_manipulation/: CMakeLists.txt  package.xml
ur_openai_ros/ur_reaching/: CMakeLists.txt  package.xml  setup.py
ur_openai_ros/ur_reaching/config/: reaching_params.yaml
ur_openai_ros/ur_reaching/launch/: ppo_gae.launch  reaching.launch
ur_openai_ros/ur_reaching/script/: tf_listener.py
ur_openai_ros/ur_reaching/script/ur_reaching/: __init__.py  gazebo_execution.py  modified_rlkit_td3_main.py  ppo_gae_main.py  reaching_main.py  reinforcement_main.py  rlkit_ddpg_main.py  rlkit_her_td3_main.py  rlkit_main.py  rlkit_sac_main.py  rlkit_td3_main.py
ur_openai_ros/ur_reaching/script/ur_reaching.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ur_openai_ros/ur_reaching/script/ur_reaching/algorithm/: REINFORCEAgent.py  __init__.py  ppo_gae.py  qlearn.py
ur_openai_ros/ur_reaching/script/ur_reaching/env/: __init__.py  controllers_connection.py  gazebo_connection.py  gazebo_execution.py  joint_publisher.py  joint_traj_publisher.py  rlkit_ur_env.py  rlkit_ur_goal_env.py  robot_gazebo_env_goal.py  ur_reaching_env.py  ur_state.py  ur_utils.py
ur_openai_ros/ur_reaching/script/ur_reaching/util/: __init__.py
ur_openai_ros/ur_reaching/training_results/: openaigym.manifest.0.7701.manifest.json
ur_openai_ros/ur_reaching/utils/: config.py
ur_openai_ros/ur_reinforcement_learning/: CMakeLists.txt  package.xml  setup.py
ur_openai_ros/ur_reinforcement_learning/config/: reaching_params.yaml
ur_openai_ros/ur_reinforcement_learning/launch/: ppo_gae.launch  reinforcement.launch
ur_openai_ros/ur_reinforcement_learning/script/ur_reinforcement_learning/: __init__.py  ppo_gae_main.py  reinforcement_main.py
ur_openai_ros/ur_reinforcement_learning/script/ur_reinforcement_learning/algorithm/: REINFORCEAgent.py  __init__.py  ppo_gae.py
ur_openai_ros/ur_reinforcement_learning/script/ur_reinforcement_learning/env/: __init__.py  controllers_connection.py  gazebo_connection.py  robot_gazebo_env.py  robot_gazebo_env_goal.py  ur_reinforcement_learning.py
ur_openai_ros/ur_reinforcement_learning/script/ur_reinforcement_learning/util/: __init__.py
ur_openai_ros/ur_reinforcement_learning/training_results/: openaigym.episode_batch.0.7701.stats.json
ur_openai_ros/ur_reinforcement_learning/utils/: plot_results.py
ur_openai_ros/ur_training/: CMakeLists.txt  package.xml  setup.py
ur_openai_ros/ur_training/config/: qlearn_params.yaml  test_params.yaml
ur_openai_ros/ur_training/launch/: default.launch  main.launch  test.launch
ur_openai_ros/ur_training/script/: gazebo_connection.py  live_plot.py  plot_Q_learn_matrix.py  realtime_matrix_animate.py  start_training_v2.py  ur_env.py  ur_state.py
ur_openai_ros/ur_training/script/ur_training/: __init__.py  default.py  start_training.py  start_training_v2.py  test.py
ur_openai_ros/ur_training/script/ur_training/algorithm/: __init__.py  simple_qlearn.py
ur_openai_ros/ur_training/script/ur_training/env/: __init__.py  controllers_connection.py  joint_publisher.py  joint_traj_publisher.py  jump_control.py  robot_gazebo_env_goal.py  ur_default_env.py  ur_env.py  ur_sim_env.py  ur_state.py  ur_test_env.py
ur_openai_ros/ur_training/src/: change_gravity.py  joint_publisher.py  simple_qlearn.py  ur_env.py
ur_rl_msgs/: CMakeLists.txt  package.xml
ur_rl_msgs/msg/: blocks_poses.msg
ur_robotiq_description/: CMakeLists.txt  package.xml
ur_robotiq_description/launch/: rviz.launch
ur_robotiq_description/rviz/: config.rviz
ur_robotiq_description/urdf/: common.gazebo.xacro  common.xacro  ur5-vel.urdf.xacro  ur5.urdf.xacro  ur_robotiq-vel.urdf.xacro
ur_robotiq_description/urdf/sensors/: kinect2.gazebo.xacro  kinect2.urdf.xacro
ur_robotiq_gazebo/: CMakeLists.txt  package.xml
ur_robotiq_gazebo/controller/: .arm_controller.yaml.swp  arm_controller.yaml  gazebo_ros_control_params.yaml
ur_robotiq_gazebo/launch/: .conveyer_gym.launch.swp  conveyer_gym.launch  gym.launch  multi_ur_robotiq_gazebo.launch  ur_robotiq_gazebo.launch
ur_robotiq_gazebo/meshes/biscuits/: model.sdf
ur_robotiq_gazebo/meshes/book/: model.sdf
ur_robotiq_gazebo/meshes/dropbox/: model.config
ur_robotiq_gazebo/meshes/short_table/: model.sdf
ur_robotiq_gazebo/meshes/short_table/meshes/: short_table.dae
ur_robotiq_gazebo/meshes/soap2/: model.sdf
ur_robotiq_gazebo/meshes/twin_table/: model.sdf
ur_robotiq_gazebo/meshes/twin_table/meshes/: twin_table.dae
ur_robotiq_gazebo/src/: block_pose_publisher.cpp  block_spawner.cpp  blocks_poses_publisher.cpp  blocks_spawner.cpp
ur_robotiq_gazebo/worlds/: demo.world  dropbox.sdf  dropbox_clone.sdf  object.sdf  short_table.sdf  short_table_clone.sdf
ur_robotiq_moveit_api/: CMakeLists.txt  package.xml  setup.py
ur_robotiq_moveit_api/include/: ur_move_group_interface.h
ur_robotiq_moveit_api/scripts/: config.py  controller.py  move_group_python_interface.py  moveit_python_tutorial.py  moveit_reinforcement_learning.py  ur_robotiq_moveit.py
ur_robotiq_moveit_api/src/: planning_scene.cpp  ur_move_group_interface.cpp
(+228 files in other folders)
