<?xml version="1.0"?>
<package>
  <name>ur_robotiq_gazebo</name>
  <version>1.2.1</version>
  <description>
      Gazebo wrapper for the Universal robot arm with robotiq gripper.
  </description>


  <author email="nekanat.stock@gmail.com">neka-nat</author>
  <maintainer email="nekanat.stock@gmail.com">neka-nat</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ur_description</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>joint_trajectory_controller</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/meshes" />
  </export>
</package>
