<?xml version="1.0"?>
<package format="2">
  <name>robotiq_2f_gripper_control</name>
  <version>0.0.3</version>
  <description>The robotiq_2f_gripper_control package</description>

  <maintainer email="daniels.ordonez@gmail.com">Daniel Ordonez</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <depend>robotiq_2f_gripper_msgs</depend>

</package>
